--- a/src/components/input-controls/select/select.scss
+++ b/src/components/input-controls/select/select.scss
@@ -80,8 +80,9 @@
 
   .input-container {
     .value-container {
+      overflow: hidden;
+      flex: 1;
       display: flex;
-      width: 100%;
       height: 100%;
       flex-wrap: wrap;
       column-gap: v(--spacing-03);
@@ -125,9 +126,6 @@
   }
 
   .display-value {
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
     cursor: pointer;
     height: 100%;
     display: flex;
@@ -140,6 +138,12 @@
     display: flex;
     align-items: center;
     gap: v(--spacing-02);
+
+    .item-label {
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+    }
   }
 
   &:not(.multiple) .input-container.has-value {
